--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,6 +1,10 @@
 form {
   --text-color: #afafaf;
-  width: 500px;
+  width: 100%;
+  height: 400px;
+  position: relative;
+  top:0%;
+  left: 0%;
 }
 .field {
   width: 100%;
@@ -72,7 +76,7 @@ form {
 /* Strength Meter */
 .strength {
   display: flex;
-  height: 20px;
+  height: 30px;
   width: 100%;
 }
 .bar {
@@ -80,7 +84,7 @@ form {
   height: 100%;
   width: 25%;
   transition: box-shadow 500ms;
-  box-shadow: inset 0px 20px #1f1f1f;
+  box-shadow: inset 0px 30px #1f1f1f;
 }
 .bar-show {
   box-shadow: none;
@@ -119,3 +123,183 @@ ul {
   right: 0.25rem;
   bottom: 0.5rem;
 }
+
+/* Button */
+
+.buttonsection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.btn {
+  width: 100%;
+  height: 47px;
+  margin: 8px;
+
+  font-family: "Inria Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+/* .signup {
+  background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2.5px;
+  border: none;
+} */
+
+.login:enabled {
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 5px;
+}
+
+.login:enabled:hover {
+  background: black;
+  color: white;
+  transition: 0.2s ease-in;
+  border: 1px solid white;
+
+
+}
+
+/* .signup :disabled {
+  background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2.5px;
+} */
+
+.validation {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+/* Sign up button */
+
+.signup {
+  position: relative;
+  width: 100%;
+  height: 47px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
+}
+
+.signup::before:enabled {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
+  top: 0;
+  left: 0;
+  filter: blur(15px);
+  border-radius: 5px;
+  opacity: 0.5;
+  transition: 0.3s opacity ease-in-out;
+  filter: blur(20px);
+  background-size: 400%;
+  animation: anim 20s linear infinite;
+}
+
+.signup::after {
+  content: "";
+  position: absolute;
+  display: block;
+  border-radius: 5px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  top: 1px;
+  left: 1px;
+  background: rgb(0, 0, 0);
+  color: black;
+}
+
+.signup:hover {
+  transition: 0.3s opacity ease-in-out;
+  background-size: 400%;
+  animation: anim 20s linear infinite;
+  color: black;
+}
+
+@keyframes anim {
+  0% {
+    background-position: 0 0;
+  }
+  40% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.btn-span {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: white;
+
+  font-weight: 400;
+  z-index: 1;
+  background: transparent;
+  font-family: "Inria Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.btn-span:hover {
+  color: black;
+}
+
+.signup:hover::after {
+  background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
+  transition: 0.3s opacity ease-in-out;
+  opacity: 1;
+  background-size: 400%;
+  animation: anim 20s linear infinite;
+}
+
+.signup:hover::before {
+  display: none;
+  opacity: 0;
+  transition: 0.3s opacity ease-in-out;
+}
+
+.login img{
+  position: relative;
+  top: 5px;
+  left: 2px;
+}
+
+.login img:hover{
+  color: white;
+  font-size: 16px;
+  filter: invert(99%) sepia(0%) saturate(3369%) hue-rotate(271deg) brightness(117%) contrast(100%);
+}
+
+.signup img{
+  position: relative;
+  top: 2px;
+  left: 4px;
+}
+
