--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,23 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+
 html,
 body {
-  position: relative;
+ 
   width: 100%;
   height: 100%;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 body {
   color: white;
   background: black;
   margin: 0;
-  padding: 8px;
+  padding: 0;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Inria Sans";
 }
 
 a {
@@ -33,18 +37,6 @@ label {
   display: block;
 }
 
-input,
-button,
-select,
-textarea {
-  font-family: inherit;
-  font-size: inherit;
-  padding: 0.4em;
-  margin: 0 0 0.5em 0;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  border-radius: 2px;
-}
 
 input:disabled {
   color: #ccc;
@@ -54,7 +46,7 @@ input[type="range"] {
   height: 0;
 }
 
-button {
+/* button {
   color: #333;
   background-color: #f4f4f4;
   outline: none;
@@ -70,4 +62,4 @@ button:not(:disabled):active {
 
 button:focus {
   border-color: #666;
-}
+} */
