--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 html,
 body {
- 
   width: 100%;
   height: 100%;
   font-size: 16px;
+  min-width: 400px;
 }
 
 body {
@@ -37,7 +35,6 @@ label {
   display: block;
 }
 
-
 input:disabled {
   color: #ccc;
 }
@@ -63,3 +60,5 @@ button:not(:disabled):active {
 button:focus {
   border-color: #666;
 } */
+
+
