--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -173,11 +173,11 @@ ul {
 
 }
 
-/* .signup :disabled {
+.signup :disabled {
   background: linear-gradient(90deg, #ee0979 0%, #ff6a00 100%), #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2.5px;
-} */
+}
 
 .validation {
   font-weight: 400;
